feat: Enhance DonationsManager component with type safety and internationalization
- Added explicit typing for donations in DonationsManager component.
- Improved error handling and loading states with user-friendly messages.
- Refactored total amount calculation for better type safety.
- Translated static text to support internationalization using the i18next library.
- Updated French translations for contact information and addresses.
- Modified Supabase client configuration for local development.
- Updated SQL schema to include user reactions functionality.
- Created a new SQL script for managing donations structure and constraints.

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -80,7 +80,7 @@
     "title": "Contactez-nous",
     "subtitle": "Nous sommes là pour répondre à vos questions",
     "info": "Informations de contact",
-    "address": "Chebba, Mahdia, Tunisie",
+    "address": "Chorbane, Mahdia, Tunisie",
     "hours": "Lun - Ven: 9h00 - 17h00",
     "follow_us": "Suivez-nous",
     "send_message": "Envoyez-nous un message",
